--- a/packages/solid/test/browser/index.html
+++ b/packages/solid/test/browser/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SolidJS</title>
   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+    * {
+      margin: 0;
+      padding: 0;
+      font-family: "Montserrat", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+    }
+
+    body {
+      margin-top: 20px;
+      margin-left: 20px;
+    }
+  </style>
   <body>
     <div id="root"></div>
     <script type="module" src="./browser.tsx"></script>
