* Including esbuild file configuration * Fixing some imports * Changing the root id element to the solid test application from "root" to "app" * Bumping the version of the saulx/tsconfig * Fixing some things on the tsconfig from react and solid

--- a/packages/solid/test/browser/index.html
+++ b/packages/solid/test/browser/index.html
@@ -23,7 +23,7 @@
     }
   </style>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script type="module" src="./browser.tsx"></script>
   </body>
 </html>
