--- a/packages/solid/test/browser/index.html
+++ b/packages/solid/test/browser/index.html
@@ -11,7 +11,7 @@
     * {
       margin: 0;
       padding: 0;
-      font-family: "Montserrat", sans-serif;
+      font-family: 'Montserrat', sans-serif;
       font-optical-sizing: auto;
       font-weight: 400;
       font-style: normal;
@@ -24,6 +24,7 @@
   </style>
   <body>
     <div id="app"></div>
-    <script type="module" src="./browser.tsx"></script>
+    <script type="module" src="../../dist/test/browser/browser.js"></script>
+    <!-- <script type="module" src="./browser.tsx"></script> -->
   </body>
 </html>
