Fixing returning accessors, hook useBasedQuery fixed returning signals, demo fixed and renaming the hooks to use camelCase also in the filenames

--- a/packages/solid/test/browser/index.html
+++ b/packages/solid/test/browser/index.html
@@ -24,7 +24,7 @@
   </style>
   <body>
     <div id="app"></div>
-    <script type="module" src="../../dist/test/browser/browser.js"></script>
-    <!-- <script type="module" src="./browser.tsx"></script> -->
+<!--     <script type="module" src="../../dist/test/browser/browser.js"></script>-->
+     <script type="module" src="./browser.tsx"></script>
   </body>
 </html>
