--- a/packages/vue/test/browser/index.html
+++ b/packages/vue/test/browser/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue3</title>
+    <title>Based.io VueJS Demo</title>
   </head>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@@ -24,7 +24,7 @@
   </style>
   <body>
     <div id="app"></div>
-<!--     <script type="module" src="../../dist/test/browser/index.js"></script>-->
-     <script type="module" src="index.ts"></script>
+     <script type="module" src="../../dist/test/browser/index.js"></script>
+<!--    <script type="module" src="index.ts"></script>-->
   </body>
 </html>
